added service account

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,6 +14,8 @@ steps:
     - '--entry-point=hello_http' # The name of the Python function to run
     - '--trigger-http'         # Make this function invokable via HTTP
     - '--allow-unauthenticated'# Allow public access to the function's URL
+    - '--service-account=function-runner@${PROJECT_ID}.iam.gserviceaccount.com'
+
   # Add this block to the end of your file
 options:
   logging: CLOUD_LOGGING_ONLY
